Add CI/CD pipelines
- Add build github action
- Add release github action
- Fixes for global exception
